# raytracer

./: CMakeLists.txt  README.md  clangtidy.sh
src/: camera.cpp  camera.hpp  color.hpp  config.hpp  hitrecord.hpp  main.cpp  material.cpp  material.hpp  output.hpp  ray.hpp  sceneobject.cpp  sceneobject.hpp  sphere.cpp  sphere.hpp  threadworkload.cpp  threadworkload.hpp  utils.cpp  utils.hpp  vector3d.cpp  vector3d.hpp
src/materials/: dielectric.cpp  dielectric.hpp  lambertian.cpp  lambertian.hpp  material.hpp  metal.cpp  metal.hpp
src/sceneobjects/: randomscene.cpp  randomscene.hpp  sceneobject.cpp  sceneobject.hpp  sphere.cpp  sphere.hpp
